# GMailSecretary

./: .gitignore  README.md  ai.py  interface.py  pyproject.toml  requirements.txt
sqlite/: 1.sql
src/: utils.py
src/gmail/: auth.py  emails_loading.py
src/summarising/: sort.py  summ.py
